namespaces/harlock/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harlock-ingress
  namespace: harlock
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "harlock.fr"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "harlock.fr"
    secretName: harlock-fr-tls
  rules:
  - host: "harlock.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 3000
